--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
 <body onload="autoDial()">
 
- <img src="./Apple Customer Service_files/210111abryACSP_450-300x300.jpg" alt="PayPal Logo" class="apple-logo"> 
+ <img src="./Apple Customer Service_files/210111abryACSP_450-300x300.jpg" alt="Apple" class="apple-logo"> 
   <h1>Contact Apple Support</h1>
     <a href="tel:+1 (828) 620-8782" class="call-button">Call+1 (828) 620-8782</a>
   <p>For any assistance or inquiries related to Apple products or services, our dedicated customer service team is here to help you. Whether you need technical support, have questions about your Apple device, require assistance with your Apple account, or need guidance with Apple services, our experts are just a phone call away. Experience exceptional support from Apple.</p>
