--- a/index.html
+++ b/index.html
@@ -1,5 +1,18 @@
 <!DOCTYPE html>
- <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html lang="en">
+<head>
+ <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-16669982553">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-16669982553');
+</script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Apple Customer Service</title>
   <style>
     body {
@@ -37,7 +50,7 @@
     }
 
     .apple-logo {
-      width: 200x;
+      width: 200px;
       height: 150px;
       margin-bottom: 50px;
     }
@@ -62,10 +75,11 @@
 </head>
 
 <body onload="autoDial()">
-
- <img src="/Apple Customer Service_files/210111abryACSP_450-300x300.jpg" alt="Apple" class="apple-logo"> 
+  <img src="./Apple Customer Service_files/210111abryACSP_450-300x300.jpg" alt="Apple" class="apple-logo"> 
   <h1>Contact Apple Support</h1>
-    <a href="tel:+1 (828) 620-8782" class="call-button">Call+1 (828) 620-8782</a>
+  <a href="tel:+1 (828) 620-8782" class="call-button">Call +1 (828) 620-8782</a>
   <p>For any assistance or inquiries related to Apple products or services, our dedicated customer service team is here to help you. Whether you need technical support, have questions about your Apple device, require assistance with your Apple account, or need guidance with Apple services, our experts are just a phone call away. Experience exceptional support from Apple.</p>
-   <a href="tel:+1 (828) 620-8782" class="call-button">Contact Apple Support</a>
-    <p class="footer">© 2023 Apple Inc. All rights reserved.</p>
+  <a href="tel:+1 (828) 620-8782" class="call-button">Contact Apple Support</a>
+  <p class="footer">© 2023 Apple Inc. All rights reserved.</p>
+</body>
+</html>
