--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<html><head>
- <!-- Google tag (gtag.js) -->
+<html><head> <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16670032686">
 </script>
 <script>
