--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
-<html><head> <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=AW-16670032686">
+<html><!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-16679210309">
 </script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'AW-16670032686');
-</script> 
+  gtag('config', 'AW-16679210309');
+</script>
 <meta charset="UTF-8">
  
 </script>
