--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html> <head><!-- Google tag (gtag.js) -->
+<html> <head><!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16679210309"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'AW-16679210309'); </script><!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16679210309">
 </script>
 <script>
